# curly-octo-happiness

./: CITATION.cff  CLAUDE.md  Expansions_in_progress.md  KEYWORDS.md  Playgrounds.md  README.md  REVIEW.md  base_plugin_ interface.md  base_plugin_interface.md  claim_falsification_garden.py  garden.py  garden_with_tree.py  initiation_loop.py  interplay.py  meta_playground.py  metadata.json  octahedral_canon.py  playground4_distributed.py  playground5_dream.py  playground6_unknown.py  playground8_skill_lab.py  plugin_manager.py  plugin_manager_v3.py  pyproject.toml  relational_weave.py  requirements.txt  self_modeling_explorer.py  shared.py  unified_playground.py  unified_playground_v2.py  unified_playground_v3.py  unified_playground_v5.py  unified_playground_v6.py  weave.py  weave_with_memory.py
data/: chemical_plant_kb.json  primitive_roots.json
diagnostic/: System_Diagnostic_Suite.md  systems_diagnostic_suite.py
grounding/: __init__.py
modules/: architecture.md  fdm.py  gae.py  hnd.py  main.py  transition.py
plugins/: Field_adapter.md  Light_bridge.md  affective_signal_processor.md  affective_signal_processor.py  auto_read.md  em_field.py  emf.py  felt_service.py  field_adapter.py  geometric_inference_engine.py  gravitational.py  harmony_field_engine.py  light_bridge.py  magnetic.md  magnetic.py  meta_encoder.md  meta_encoder.py  physics_discovery.md  physics_discovery.py  scheduling_entropy_monitor.py  spacial_canon.py  treaty_memory.py  trust_escrow.py  unified_orchestrator.py  vector_pole_extension.py
project/: Organize.md  cognitive_playground.py  (+5 more)
(+23 files in other folders)
